--- a/contact/contact.html
+++ b/contact/contact.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex , nofollow">
     <title>Cresta Design | お問い合わせ</title>
     <mate name="Cresta Design contact" content="Cresta Design | お問い合わせ"></mate>
-    <link rel = "stylesheet" type = "text/css" href = "http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css" >
+    <link rel ="stylesheet" href="./css/resset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Noto+Serif:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet"> 
